fixing migrations for using new codegen
